remove ItemDTO